Longer title animation and fixed container on mobile

--- a/css/hotbar.css
+++ b/css/hotbar.css
@@ -157,3 +157,15 @@
         top:30%;
     }
 }
+
+@media (max-width:650px) {
+    .hotbarContainer {
+        margin-top:120px;
+    }
+}
+
+@media (max-width:400px) {
+    .hotbarContainer {
+        margin-top:90px;
+    }
+}
